<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_menu">

    <fragment
        android:id = "@+id/navigation_choices"
        android:name="com.cpen321.modernwaiter.customer.ui.choices.ChoiceFragment"
        android:label="Choices"
        tools:layout="@layout/fragment_choice_list">
...
    </fragment>

    <fragment
        android:id="@+id/navigation_bill"
        android:name="com.cpen321.modernwaiter.customer.ui.bill.BillFragment"
        android:label="Bill"
        tools:layout="@layout/fragment_bill" >
        <action
            android:id="@+id/action_navigation_payment_to_navigation_stripe"
            app:destination="@id/navigation_stripe" />

        <action
            android:id="@+id/action_navigation_payment_to_per_item_payment"
...
