<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_bill"
    android:background="@drawable/repeating_background">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bill_recycler"
        android:name="com.cpen321.modernwaiter.ui.pay.Bill_ItemFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="60dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/payForAll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:context=".customer.ui.bill.BillFragment"
        tools:listitem="@layout/item_bill" />


    <View
        android:id="@+id/horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="#C5C5C5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bill_recycler"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/payForAll"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/blue"
        android:elevation="1dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        android:text="@string/pay_for_all"
        android:translationZ="1dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/splitEvenly"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/splitEvenly"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/orange"
        android:elevation="1dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        android:text="@string/split_evenly"
        android:translationZ="1dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/payPerItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/payPerItem"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/green"
        android:elevation="1dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        android:text="@string/pay_per_item"
        android:translationZ="1dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/emptyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill_empty_string"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bill_recycler" />

    <TextView
        android:id="@+id/totalLabel"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="27dp"
        android:gravity="center"
        android:text="Total"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/payForAll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bill_recycler"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/totalPrice"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginEnd="27dp"
        android:gravity="center"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/payForAll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bill_recycler"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
